cambio de api y ult arreglos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </button>
 
             <div>
-                <pre id="result">
+                <pre id="results">
 
                 </pre>
             </div>
